JEAP-7164 Fixed sonar issues and refactored deprecated spring boot starter.